Adapt sizes to prevent overflow

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -786,7 +786,7 @@ button i,
 			color:#000;
 		}
 		> li {
-			margin:4px 0 0 10px;
+			margin:4px 0 0 8px;
 			position:relative;
 		}
 		> li a, > li a:hover {
